--- a/worderlands/index.html
+++ b/worderlands/index.html
@@ -12,7 +12,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Who da man?!</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
