--- a/worderlands/index.html
+++ b/worderlands/index.html
@@ -1,24 +1,151 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/main.css" />
-        <title>Worderlands</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Who da man?!</p>
-            </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css">
+    <link rel="stylesheet" href="css/idangerous.swiper.css">
+    <link rel="stylesheet" href="css/worderlands.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Worderlands</title>
+  </head>
+  <body>
+    <!-- Start of first page: #home -->
+    <div data-role="page" id="home">
+      <div id="first_page" class="wrapper">
+        <img src="img/title_splash_color.jpg" id="home_background" class="faded"/>
+        <div id="splashes">
+          <div id="ptotem_logo" class="logo"><img src="img/ptotem.png"/>
+            <h2>Ptotem <br>Games
+                <small><br>and</small>
+            </h2>
+          </div>
+          <div id="genii_logo" class="logo"><img src="img/genii.png"/>
+            <h2>Genii <br>Technologies
+                <small><br>present</small>
+            </h2>
+          </div>
         </div>
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+        <div class="main">
+          <img src="img/catchphrase.png" style="right:0;top:0;"/>
+          <img src="img/game_name.png" style="left:0;top:0.7em;"/>
+        </div>
+        <a href="#context" data-role="button" data-inline="true" data-theme="b" data-transition="flip"
+             class="right-btn" style="right:-5em;bottom:18em;display: none;">Start</a>
+      </div>
+    </div>
+    <!-- /page one -->
+
+    <!-- Start of page one.five: #context -->
+    <div data-role="page" id="context">
+      <div id="context_page" class="wrapper">
+        <img src="img/level_ladder_background.jpg" id="context_background"/>
+        <div class="banner">
+          <div class="health">
+              <img src="img/health.png" alt=""/>
+          </div>
+          <div class="money">
+              <img src="img/gold.png" alt=""/>
+          </div>
+        </div>
+        <div class="level">Level 00</div>
+        <div id="enemies_context"></div>
+        <div id="enemies_details"></div>
+        <div class="story-container">
+          Hail the king!
+          <br>
+          <br>
+          As in the past,
+          the Worderlands shall bow to you and accept your right to rule,
+          as long as you continue to prove yourself worthy.
+          <br>
+          <br>
+          Play the game of words against all who challenge you. Defend your throne... if you can...
+        </div>
+        <a href="#home" data-role="button" data-inline="true" data-theme="a" class="left-btn">Back</a>
+        <div class="center-button">
+            <div>Defeat all <br>to clear <br>the level</div>
+        </div>
+        <a href="#level_ladder" data-role="button" data-inline="true" data-theme="b" data-transition="flip"
+           class="right-btn">Start</a>
+      </div>
+    </div>
+    <!-- /page one.five -->
+    <!-- Start of second page: #level_ladder -->
+    <div data-role="page" id="level_ladder">
+      <div id="second_page" class="wrapper">
+        <img src="img/level_ladder_background.jpg" id="level_ladder_background"/>
+        <div class="banner">
+          <div class="health">
+            <img src="img/health.png" alt=""/>
+          </div>
+          <div class="money">
+            <img src="img/gold.png" alt=""/>
+          </div>
+        </div>
+        <div class="level">Level 00</div>
+        <div class="enemies-container">
+          <div class="enemies-wrapper"></div>
+        </div>
+        <a href="#" id="restart" onclick='level_start(current_level,true);'><img src="img/restart.png"/></a>
+        <div id="victory_count"></div>
+        <div id="progress_bar">
+          <div id="progress"></div>
+        </div>
+        <a href="#context" data-role="button" data-inline="true" data-theme="a" class="left-btn">Back</a>
+        <div class="center-button">
+          <div>Swipe the <br>challengers <br>to browse</div>
+        </div>
+        <a href="#inventory" data-role="button" data-inline="true" data-theme="b" data-transition="flip"
+             class="right-btn">Prepare</a>
+      </div>
+    </div>
+    <!-- /page two -->
+
+    <!-- Start of third page: #inventory -->
+    <div data-role="page" id="inventory">
+      <div id="third_page" class="wrapper">
+        <img src="img/level_ladder_background.jpg" id="inventory_background"/>
+          <div class="banner">
+            <div class="health">
+              <img src="img/health.png" alt=""/>
+            </div>
+          <div class="money">
+            <img src="img/gold.png"/>
+          </div>
+        </div>
+        <img src="img/equips.png" id="equipment"/>
+        <div class="swiper-container">
+          <div class="swiper-wrapper"></div>
+        </div>
+        <a href="#" id="equip"><img src="img/equip.png" alt=""/></a>
+        <div class="slot" id="slot1"></div>
+        <div class="slot" id="slot2"></div>
+        <div class="slot" id="slot3"></div>
+        <div class="slot" id="slot4"></div>
+        <div class="slot" id="slot5"></div>
+        <div class="slot" id="slot6"></div>
+        <a href="#" id="buy_coins"><img src="img/buy_coins.png" alt=""/></a>
+        <a href="#level_ladder" data-role="button" data-inline="true" data-theme="a" data-transition="flip" class="left-btn">Back</a>
+        <div class="center-button">
+          <div>Swipe the <br>items <br>to browse</div>
+        </div>
+        <a href="fight.html" data-role="button" data-inline="true" data-theme="b" data-transition="flip" data-ajax="false" class="right-btn" onclick="alert(get_string('characters'))">Fight</a>
+      </div>
+    </div>
+    <!-- /page three -->
+
+    <!-- <script type="text/javascript" src="phonegap.js"></script> -->
+    <script type="text/javascript" src="js/vendor/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="js/vendor/jquery.mobile-1.3.1.min.js"></script>
+    <script type="text/javascript" src="js/vendor/preloadImages.jquery.js"></script>
+    <script type="text/javascript" src="js/vendor/idangerous.swiper-1.5.5.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/data.js"></script>
+    <script type="text/javascript" src="js/plugins.js"></script>
+    <script type="text/javascript">
+      app.initialize();
+    </script>
+  </body>
 </html>
